feat(openapi): add triple error components
